vlib/v/checker/tests/no_interface_instantiation_c.out
vlib/v/checker/tests/no_interface_instantiation_c.vv:5:10: notice: unused parameter: `s`
    3 | }
    4 | 
    5 | fn my_fn(s Speaker) {}
      |          ^
    6 | 
    7 | fn main() {
vlib/v/checker/tests/no_interface_instantiation_c.vv:9:3: error: cannot instantiate interface `Speaker`
    7 | fn main() {
    8 |     my_fn(
    9 |         speak: 1
      |         ~~~~~~~~
   10 |     )
   11 | }
